# election

./: .pre-commit-config.yaml  Pipfile  Visualization.ipynb  __init__.py  pyproject.toml  voting.py
election/: country.py  distribution.py  district.py  election_2021.py  mandates_150.py  nation.py  party.py  representatives_distribution.py  voting.py
election/data/: area_population_2024.csv  votes_2021.csv
election/examples/: election_2021.py
example/: FYNK.xlsx  Untitled.ipynb  distribution.py  mandates_150.py  representatives_distribution.py  tabell.xlsx
notebooks/: Sample plots.ipynb
src/election/: api.py  dashboard.py  district.py  nation.py  party.py  plots.py
src/election/data/: area_population_2021.csv  area_population_2024.csv
src/election/examples/: election_2021.py  prognosis.py
src/notebooks/: Sample plots.ipynb
tests/: conftest.py  test_county.py  test_district.py  test_nation.py  test_party.py  test_voting.py
tests/t_utils/: models.py
