[tool.poetry]
name = "election"
version = "0.1.0"
description = "Python application for analysis of the Norwegian election"
authors = ["vegard ulriksen solberg <vegardsolberg@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
plotly = "*"
dash = "*"
dash-bootstrap-components = "*"
seaborn = "*"
gunicorn = "*"
openpyxl = "^3.0.9"
testfixtures = "^6.18.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
black = "^21.7b0"
flake8 = "^3.9.2"
pytest = "^6.2.5"

[tool.isort]
profile = "black"
line_length = 100


[tool.black]
line-length = 100
target-version = ["py37", "py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | profiling
)/
'''


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
